// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration:landing-page/layout renders the layout with header, child and footer correctly 1`] = `
<div>
  <section
    class="max-w-screen-xl overflow-hidden px-4 sm:px-6 mt-10 sm:flex md:justify-center md:items-end items-center md:mx-auto mx-6"
  >
    <div
      class="flex flex-col w-full max-w-2xl"
    >
      <h1
        class="md:text-6xl text-5xl font-bold text-brand-neutral-11"
      >
        Welcome to Resume Cart
      </h1>
      <div
        class="w-full justify-center items-center relative flex md:hidden mt-8"
      >
        <img
          alt="Resume illustration"
          data-nimg="1"
          decoding="async"
          height="275"
          loading="lazy"
          src="/_next/image?url=%2Fresume-illustration.png&w=750&q=75"
          srcset="/_next/image?url=%2Fresume-illustration.png&w=384&q=75 1x, /_next/image?url=%2Fresume-illustration.png&w=750&q=75 2x"
          style="color: transparent;"
          width="340"
        />
      </div>
      <h5
        class="md:text-2xl text-base text-brand-neutral-8 mt-14"
      >
        Enter the data that will be filled in your resume. The data entered here will later be modified for the different job descriptions that you will provide.
      </h5>
      <a
        href="/generate-variants"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-full font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-brand-secondary-blue-4 text-brand-secondary-blue-10 hover:bg-brand-secondary-blue-6 active:bg-brand-secondary-blue-8 disabled:bg-brand-primary-green-7 disabled:text-brand-neutral-8 dark:bg-brand-secondary-blue-4 dark:text-brand-secondary-blue-10 dark:hover:bg-brand-secondary-blue-6 dark:active:bg-brand-secondary-blue-8 dark:disabled:bg-brand-neutral-7 dark:disabled:text-brand-neutral-8 h-10 md:text-4xl text-xl py-7 px-7 w-fit mt-9 md:mx-0 mx-auto"
        >
          Get Started
        </button>
      </a>
    </div>
    <div
      class="justify-center items-center hidden md:flex"
    >
      <img
        alt="Resume illustration"
        data-nimg="1"
        decoding="async"
        height="416"
        loading="lazy"
        src="/_next/image?url=%2Fresume-illustration.png&w=1080&q=75"
        srcset="/_next/image?url=%2Fresume-illustration.png&w=640&q=75 1x, /_next/image?url=%2Fresume-illustration.png&w=1080&q=75 2x"
        style="color: transparent;"
        width="515"
      />
    </div>
  </section>
  <section
    class="max-w-screen-xl overflow-hidden px-4 sm:px-6 mt-24 sm:flex sm:flex-col md:justify-center md:items-start items-center md:mx-auto mx-6"
  >
    <h2
      class="md:text-5xl text-4xl font-bold text-brand-neutral-11 mx-auto text-center"
    >
      How It Works
    </h2>
    <div
      class="flex gap-5 mt-6"
    >
      <div
        class="flex justify-center items-center rounded-full md:w-16 md:h-16 w-10 h-10 bg-brand-primary-brown-4 md:text-4xl text-3xl text-brand-secondary-blue-10 font-bold p-6 md:p-8"
      >
        1
      </div>
      <div>
        <h3
          class="md:text-3xl text-2xl text-brand-primary-brown-10 font-bold"
        >
          One-Time Resume Input
        </h3>
        <p
          class="md:text-xl text-base text-brand-neutral-9"
        >
          Input your resume details just once. We store your information in your browser for future use. Your information is not shared with any third party.
        </p>
      </div>
    </div>
    <div
      class="flex gap-5 mt-6"
    >
      <div
        class="flex justify-center items-center rounded-full md:w-16 md:h-16 w-10 h-10 bg-brand-primary-brown-4 md:text-4xl text-3xl text-brand-secondary-blue-10 font-bold p-6 md:p-8"
      >
        2
      </div>
      <div>
        <h3
          class="md:text-3xl text-2xl text-brand-primary-brown-10 font-bold"
        >
          Job Description Integration
        </h3>
        <p
          class="md:text-xl text-base text-brand-neutral-9"
        >
          Provide the job description for the position you're targeting. Our intelligent system generates a custom ChatGPT prompt just for you.
        </p>
      </div>
    </div>
    <div
      class="flex gap-5 mt-6"
    >
      <div
        class="flex justify-center items-center rounded-full md:w-16 md:h-16 w-10 h-10 bg-brand-primary-brown-4 md:text-4xl text-3xl text-brand-secondary-blue-10 font-bold p-6 md:p-8"
      >
        3
      </div>
      <div>
        <h3
          class="md:text-3xl text-2xl text-brand-primary-brown-10 font-bold"
        >
          Generate Your Custom Resume
        </h3>
        <p
          class="md:text-xl text-base text-brand-neutral-9"
        >
          Copy and paste the ChatGPT response into the app. Watch as Resume Craft transforms it into a tailor-made, ATS-friendly resume.
        </p>
      </div>
    </div>
  </section>
  <section
    class="max-w-screen-xl overflow-hidden px-4 sm:px-6 mt-24 sm:flex sm:flex-col md:justify-center md:items-start items-center md:mx-auto mx-6"
  >
    <h2
      class="md:text-5xl text-4xl font-bold text-brand-neutral-11 mx-auto text-center"
    >
      Key Features
    </h2>
    <h5
      class="md:text-2xl text-base text-brand-neutral-8 mt-6 text-center mx-auto"
    >
      Unlock Your Potential with Resume Craft's Powerful Features
    </h5>
    <div
      class="flex flex-wrap md:gap-12 gap-8 mx-auto items-center justify-center"
    >
      <div
        class="w-72"
      >
        <div
          class="z-20 flex justify-center items-center rounded-full md:w-16 md:h-16 w-10 h-10 bg-brand-primary-green-10 text-brand-neutral-2 relative top-5 md:left-[calc(50%-32px)] left-[calc(50%-20px)]"
        >
          <svg
            fill="currentColor"
            height="20"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
            />
          </svg>
        </div>
        <div
          class="rounded-lg border text-card-foreground shadow-sm p-2 bg-brand-secondary-blue-4 md:min-h-72 min-h-64"
        >
          <div
            class="flex flex-col space-y-1.5 p-6"
          >
            <h3
              class="tracking-tight text-center text-brand-primary-green-10 md:text-2xl text-xl font-bold"
            >
              Automation
            </h3>
          </div>
          <div
            class="p-6 pt-0"
          >
            <p
              class="text-brand-primary-green-8 dark:text-brand-primary-green-10 text-base"
            >
              Cut down hours of manual tweaking. Resume Craft automates the customization process, allowing you to focus on what matters – your skills and experience.
            </p>
          </div>
        </div>
      </div>
      <div
        class="w-72"
      >
        <div
          class="z-20 flex justify-center items-center rounded-full md:w-16 md:h-16 w-10 h-10 bg-brand-primary-green-10 text-brand-neutral-2 relative top-5 md:left-[calc(50%-32px)] left-[calc(50%-20px)]"
        >
          <svg
            fill="currentColor"
            height="20"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 384 512"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M288 248v28c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-28c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm-12 72H108c-6.6 0-12 5.4-12 12v28c0 6.6 5.4 12 12 12h168c6.6 0 12-5.4 12-12v-28c0-6.6-5.4-12-12-12zm108-188.1V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V48C0 21.5 21.5 0 48 0h204.1C264.8 0 277 5.1 286 14.1L369.9 98c9 8.9 14.1 21.2 14.1 33.9zm-128-80V128h76.1L256 51.9zM336 464V176H232c-13.3 0-24-10.7-24-24V48H48v416h288z"
            />
          </svg>
        </div>
        <div
          class="rounded-lg border text-card-foreground shadow-sm p-2 bg-brand-secondary-blue-4 md:min-h-72 min-h-64"
        >
          <div
            class="flex flex-col space-y-1.5 p-6"
          >
            <h3
              class="tracking-tight text-center text-brand-primary-green-10 md:text-2xl text-xl font-bold"
            >
              ATS Optimization
            </h3>
          </div>
          <div
            class="p-6 pt-0"
          >
            <p
              class="text-brand-primary-green-8 dark:text-brand-primary-green-10 text-base"
            >
              Our system is designed to enhance your resume&apos;s compatibility with Applicant Tracking Systems, increasing your chances of getting noticed.
            </p>
          </div>
        </div>
      </div>
      <div
        class="w-72"
      >
        <div
          class="z-20 flex justify-center items-center rounded-full md:w-16 md:h-16 w-10 h-10 bg-brand-primary-green-10 text-brand-neutral-2 relative top-5 md:left-[calc(50%-32px)] left-[calc(50%-20px)]"
        >
          <svg
            fill="currentColor"
            height="20"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 384 512"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M384 144c0-44.2-35.8-80-80-80s-80 35.8-80 80c0 36.4 24.3 67.1 57.5 76.8-.6 16.1-4.2 28.5-11 36.9-15.4 19.2-49.3 22.4-85.2 25.7-28.2 2.6-57.4 5.4-81.3 16.9v-144c32.5-10.2 56-40.5 56-76.3 0-44.2-35.8-80-80-80S0 35.8 0 80c0 35.8 23.5 66.1 56 76.3v199.3C23.5 365.9 0 396.2 0 432c0 44.2 35.8 80 80 80s80-35.8 80-80c0-34-21.2-63.1-51.2-74.6 3.1-5.2 7.8-9.8 14.9-13.4 16.2-8.2 40.4-10.4 66.1-12.8 42.2-3.9 90-8.4 118.2-43.4 14-17.4 21.1-39.8 21.6-67.9 31.6-10.8 54.4-40.7 54.4-75.9zM80 64c8.8 0 16 7.2 16 16s-7.2 16-16 16-16-7.2-16-16 7.2-16 16-16zm0 384c-8.8 0-16-7.2-16-16s7.2-16 16-16 16 7.2 16 16-7.2 16-16 16zm224-320c8.8 0 16 7.2 16 16s-7.2 16-16 16-16-7.2-16-16 7.2-16 16-16z"
            />
          </svg>
        </div>
        <div
          class="rounded-lg border text-card-foreground shadow-sm p-2 bg-brand-secondary-blue-4 md:min-h-72 min-h-64"
        >
          <div
            class="flex flex-col space-y-1.5 p-6"
          >
            <h3
              class="tracking-tight text-center text-brand-primary-green-10 md:text-2xl text-xl font-bold"
            >
              Versatility
            </h3>
          </div>
          <div
            class="p-6 pt-0"
          >
            <p
              class="text-brand-primary-green-8 dark:text-brand-primary-green-10 text-base"
            >
              Tailor your resume for diverse job opportunities effortlessly. Resume Craft adapts to different roles, industries, and requirements.
            </p>
          </div>
        </div>
      </div>
    </div>
  </section>
  <section
    class="max-w-screen-xl overflow-hidden px-4 sm:px-6 mt-24 sm:flex sm:flex-col md:justify-center md:items-start items-center md:mx-auto mx-6"
  >
    <h2
      class="md:text-5xl text-4xl font-bold text-brand-neutral-11 mx-auto text-center"
    >
      Why Choose Resume Craft
    </h2>
    <div
      class="rounded-lg border text-card-foreground shadow-sm p-2 bg-brand-primary-brown-3 mt-11 px-7 py-8 w-full max-w-6xl"
    >
      <p
        class="text-brand-neutral-9 text-base"
      >
        Embark on a seamless journey to career success with Resume Craft. Our platform is designed to empower you, ensuring your resume stands out in the competitive job market. By combining efficiency, precision, and user-friendly navigation, Resume Craft becomes your trusted companion in crafting tailored resumes. Say goodbye to the uncertainty of job applications and embrace the confidence that comes with presenting a customized, ATS-friendly resume. Elevate your career prospects effortlessly with Resume Craft - where your professional journey takes center stage.
      </p>
    </div>
  </section>
  <section
    class="max-w-screen-xl overflow-hidden px-4 sm:px-6 mt-24 mb-16 md:justify-center md:items-start items-center md:mx-auto mx-6 gap-10 flex flex-col"
  >
    <h2
      class="md:text-5xl text-4xl font-bold text-brand-neutral-11 mx-auto text-center"
    >
      Get Started Today
    </h2>
    <p
      class="text-brand-neutral-9 text-xl md:text-center"
    >
      Crafting your dream career starts with the right resume. Sign up for Resume Craft now and experience a new era of personalized, efficient job application preparation.
    </p>
    <h3
      class="italic text-brand-secondary-blue-10 md:text-2xl text-xl text-center mx-auto mt-9"
    >
      - Your Journey to Success Begins with Resume Craft -
    </h3>
  </section>
</div>
`;

exports[`integration:landing-page/page snapshot 1`] = `
<div>
  <section
    class="max-w-screen-xl overflow-hidden px-4 sm:px-6 mt-10 sm:flex md:justify-center md:items-end items-center md:mx-auto mx-6"
  >
    <div
      class="flex flex-col w-full max-w-2xl"
    >
      <h1
        class="md:text-6xl text-5xl font-bold text-brand-neutral-11"
      >
        Welcome to Resume Cart
      </h1>
      <div
        class="w-full justify-center items-center relative flex md:hidden mt-8"
      >
        <img
          alt="Resume illustration"
          data-nimg="1"
          decoding="async"
          height="275"
          loading="lazy"
          src="/_next/image?url=%2Fresume-illustration.png&w=750&q=75"
          srcset="/_next/image?url=%2Fresume-illustration.png&w=384&q=75 1x, /_next/image?url=%2Fresume-illustration.png&w=750&q=75 2x"
          style="color: transparent;"
          width="340"
        />
      </div>
      <h5
        class="md:text-2xl text-base text-brand-neutral-8 mt-14"
      >
        Enter the data that will be filled in your resume. The data entered here will later be modified for the different job descriptions that you will provide.
      </h5>
      <a
        href="/generate-variants"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-full font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-brand-secondary-blue-4 text-brand-secondary-blue-10 hover:bg-brand-secondary-blue-6 active:bg-brand-secondary-blue-8 disabled:bg-brand-primary-green-7 disabled:text-brand-neutral-8 dark:bg-brand-secondary-blue-4 dark:text-brand-secondary-blue-10 dark:hover:bg-brand-secondary-blue-6 dark:active:bg-brand-secondary-blue-8 dark:disabled:bg-brand-neutral-7 dark:disabled:text-brand-neutral-8 h-10 md:text-4xl text-xl py-7 px-7 w-fit mt-9 md:mx-0 mx-auto"
          role="button"
        >
          Get Started
        </button>
      </a>
    </div>
    <div
      class="justify-center items-center hidden md:flex"
    >
      <img
        alt="Resume illustration"
        data-nimg="1"
        decoding="async"
        height="416"
        loading="lazy"
        src="/_next/image?url=%2Fresume-illustration.png&w=1080&q=75"
        srcset="/_next/image?url=%2Fresume-illustration.png&w=640&q=75 1x, /_next/image?url=%2Fresume-illustration.png&w=1080&q=75 2x"
        style="color: transparent;"
        width="515"
      />
    </div>
  </section>
  <section
    class="max-w-screen-xl overflow-hidden px-4 sm:px-6 mt-24 sm:flex sm:flex-col md:justify-center md:items-start items-center md:mx-auto mx-6"
  >
    <h2
      class="md:text-5xl text-4xl font-bold text-brand-neutral-11 mx-auto text-center"
    >
      How It Works
    </h2>
    <div
      class="flex gap-5 mt-6"
    >
      <div
        class="flex justify-center items-center rounded-full md:w-16 md:h-16 w-10 h-10 bg-brand-primary-brown-4 md:text-4xl text-3xl text-brand-secondary-blue-10 font-bold p-6 md:p-8"
      >
        1
      </div>
      <div>
        <h3
          class="md:text-3xl text-2xl text-brand-primary-brown-10 font-bold"
        >
          One-Time Resume Input
        </h3>
        <p
          class="md:text-xl text-base text-brand-neutral-9"
        >
          Input your resume details just once. We store your information in your browser for future use. Your information is not shared with any third party.
        </p>
      </div>
    </div>
    <div
      class="flex gap-5 mt-6"
    >
      <div
        class="flex justify-center items-center rounded-full md:w-16 md:h-16 w-10 h-10 bg-brand-primary-brown-4 md:text-4xl text-3xl text-brand-secondary-blue-10 font-bold p-6 md:p-8"
      >
        2
      </div>
      <div>
        <h3
          class="md:text-3xl text-2xl text-brand-primary-brown-10 font-bold"
        >
          Job Description Integration
        </h3>
        <p
          class="md:text-xl text-base text-brand-neutral-9"
        >
          Provide the job description for the position you're targeting. Our intelligent system generates a custom ChatGPT prompt just for you.
        </p>
      </div>
    </div>
    <div
      class="flex gap-5 mt-6"
    >
      <div
        class="flex justify-center items-center rounded-full md:w-16 md:h-16 w-10 h-10 bg-brand-primary-brown-4 md:text-4xl text-3xl text-brand-secondary-blue-10 font-bold p-6 md:p-8"
      >
        3
      </div>
      <div>
        <h3
          class="md:text-3xl text-2xl text-brand-primary-brown-10 font-bold"
        >
          Generate Your Custom Resume
        </h3>
        <p
          class="md:text-xl text-base text-brand-neutral-9"
        >
          Copy and paste the ChatGPT response into the app. Watch as Resume Craft transforms it into a tailor-made, ATS-friendly resume.
        </p>
      </div>
    </div>
  </section>
  <section
    class="max-w-screen-xl overflow-hidden px-4 sm:px-6 mt-24 sm:flex sm:flex-col md:justify-center md:items-start items-center md:mx-auto mx-6"
  >
    <h2
      class="md:text-5xl text-4xl font-bold text-brand-neutral-11 mx-auto text-center"
    >
      Key Features
    </h2>
    <h5
      class="md:text-2xl text-base text-brand-neutral-8 mt-6 text-center mx-auto"
    >
      Unlock Your Potential with Resume Craft's Powerful Features
    </h5>
    <div
      class="flex flex-wrap md:gap-12 gap-8 mx-auto items-center justify-center"
    >
      <div
        class="w-72"
      >
        <div
          class="z-20 flex justify-center items-center rounded-full md:w-16 md:h-16 w-10 h-10 bg-brand-primary-green-10 text-brand-neutral-2 relative top-5 md:left-[calc(50%-32px)] left-[calc(50%-20px)]"
        >
          <svg
            fill="currentColor"
            height="20"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
            />
          </svg>
        </div>
        <div
          class="rounded-lg border text-card-foreground shadow-sm p-2 bg-brand-secondary-blue-4 md:min-h-72 min-h-64"
        >
          <div
            class="flex flex-col space-y-1.5 p-6"
          >
            <h3
              class="tracking-tight text-center text-brand-primary-green-10 md:text-2xl text-xl font-bold"
            >
              Automation
            </h3>
          </div>
          <div
            class="p-6 pt-0"
          >
            <p
              class="text-brand-primary-green-8 dark:text-brand-primary-green-10 text-base"
            >
              Cut down hours of manual tweaking. Resume Craft automates the customization process, allowing you to focus on what matters – your skills and experience.
            </p>
          </div>
        </div>
      </div>
      <div
        class="w-72"
      >
        <div
          class="z-20 flex justify-center items-center rounded-full md:w-16 md:h-16 w-10 h-10 bg-brand-primary-green-10 text-brand-neutral-2 relative top-5 md:left-[calc(50%-32px)] left-[calc(50%-20px)]"
        >
          <svg
            fill="currentColor"
            height="20"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 384 512"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M288 248v28c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-28c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm-12 72H108c-6.6 0-12 5.4-12 12v28c0 6.6 5.4 12 12 12h168c6.6 0 12-5.4 12-12v-28c0-6.6-5.4-12-12-12zm108-188.1V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V48C0 21.5 21.5 0 48 0h204.1C264.8 0 277 5.1 286 14.1L369.9 98c9 8.9 14.1 21.2 14.1 33.9zm-128-80V128h76.1L256 51.9zM336 464V176H232c-13.3 0-24-10.7-24-24V48H48v416h288z"
            />
          </svg>
        </div>
        <div
          class="rounded-lg border text-card-foreground shadow-sm p-2 bg-brand-secondary-blue-4 md:min-h-72 min-h-64"
        >
          <div
            class="flex flex-col space-y-1.5 p-6"
          >
            <h3
              class="tracking-tight text-center text-brand-primary-green-10 md:text-2xl text-xl font-bold"
            >
              ATS Optimization
            </h3>
          </div>
          <div
            class="p-6 pt-0"
          >
            <p
              class="text-brand-primary-green-8 dark:text-brand-primary-green-10 text-base"
            >
              Our system is designed to enhance your resume&apos;s compatibility with Applicant Tracking Systems, increasing your chances of getting noticed.
            </p>
          </div>
        </div>
      </div>
      <div
        class="w-72"
      >
        <div
          class="z-20 flex justify-center items-center rounded-full md:w-16 md:h-16 w-10 h-10 bg-brand-primary-green-10 text-brand-neutral-2 relative top-5 md:left-[calc(50%-32px)] left-[calc(50%-20px)]"
        >
          <svg
            fill="currentColor"
            height="20"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 384 512"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M384 144c0-44.2-35.8-80-80-80s-80 35.8-80 80c0 36.4 24.3 67.1 57.5 76.8-.6 16.1-4.2 28.5-11 36.9-15.4 19.2-49.3 22.4-85.2 25.7-28.2 2.6-57.4 5.4-81.3 16.9v-144c32.5-10.2 56-40.5 56-76.3 0-44.2-35.8-80-80-80S0 35.8 0 80c0 35.8 23.5 66.1 56 76.3v199.3C23.5 365.9 0 396.2 0 432c0 44.2 35.8 80 80 80s80-35.8 80-80c0-34-21.2-63.1-51.2-74.6 3.1-5.2 7.8-9.8 14.9-13.4 16.2-8.2 40.4-10.4 66.1-12.8 42.2-3.9 90-8.4 118.2-43.4 14-17.4 21.1-39.8 21.6-67.9 31.6-10.8 54.4-40.7 54.4-75.9zM80 64c8.8 0 16 7.2 16 16s-7.2 16-16 16-16-7.2-16-16 7.2-16 16-16zm0 384c-8.8 0-16-7.2-16-16s7.2-16 16-16 16 7.2 16 16-7.2 16-16 16zm224-320c8.8 0 16 7.2 16 16s-7.2 16-16 16-16-7.2-16-16 7.2-16 16-16z"
            />
          </svg>
        </div>
        <div
          class="rounded-lg border text-card-foreground shadow-sm p-2 bg-brand-secondary-blue-4 md:min-h-72 min-h-64"
        >
          <div
            class="flex flex-col space-y-1.5 p-6"
          >
            <h3
              class="tracking-tight text-center text-brand-primary-green-10 md:text-2xl text-xl font-bold"
            >
              Versatility
            </h3>
          </div>
          <div
            class="p-6 pt-0"
          >
            <p
              class="text-brand-primary-green-8 dark:text-brand-primary-green-10 text-base"
            >
              Tailor your resume for diverse job opportunities effortlessly. Resume Craft adapts to different roles, industries, and requirements.
            </p>
          </div>
        </div>
      </div>
    </div>
  </section>
  <section
    class="max-w-screen-xl overflow-hidden px-4 sm:px-6 mt-24 sm:flex sm:flex-col md:justify-center md:items-start items-center md:mx-auto mx-6"
  >
    <h2
      class="md:text-5xl text-4xl font-bold text-brand-neutral-11 mx-auto text-center"
    >
      Why Choose Resume Craft
    </h2>
    <div
      class="rounded-lg border text-card-foreground shadow-sm p-2 bg-brand-primary-brown-3 mt-11 px-7 py-8 w-full max-w-6xl"
    >
      <p
        class="text-brand-neutral-9 text-base"
      >
        Embark on a seamless journey to career success with Resume Craft. Our platform is designed to empower you, ensuring your resume stands out in the competitive job market. By combining efficiency, precision, and user-friendly navigation, Resume Craft becomes your trusted companion in crafting tailored resumes. Say goodbye to the uncertainty of job applications and embrace the confidence that comes with presenting a customized, ATS-friendly resume. Elevate your career prospects effortlessly with Resume Craft - where your professional journey takes center stage.
      </p>
    </div>
  </section>
  <section
    class="max-w-screen-xl overflow-hidden px-4 sm:px-6 mt-24 mb-16 md:justify-center md:items-start items-center md:mx-auto mx-6 gap-10 flex flex-col"
  >
    <h2
      class="md:text-5xl text-4xl font-bold text-brand-neutral-11 mx-auto text-center"
    >
      Get Started Today
    </h2>
    <p
      class="text-brand-neutral-9 text-xl md:text-center"
    >
      Crafting your dream career starts with the right resume. Sign up for Resume Craft now and experience a new era of personalized, efficient job application preparation.
    </p>
    <h3
      class="italic text-brand-secondary-blue-10 md:text-2xl text-xl text-center mx-auto mt-9"
    >
      - Your Journey to Success Begins with Resume Craft -
    </h3>
  </section>
</div>
`;
